sistemata foto pagina about

--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -107,6 +107,10 @@ nav a:hover {
 }
 #about-us img {
   border-radius: 20px;
+  transition: all 0.2s ease-in-out;
+}
+#about-us img:hover {
+  transform: scale(1.05);
 }
 #about-us .about-us__content-member {
   display: flex;
